fix covered image modal close button

--- a/client/src/components/QuestionsAndAnswers/components/QuestionAndAnswers.css
+++ b/client/src/components/QuestionsAndAnswers/components/QuestionAndAnswers.css
@@ -322,7 +322,7 @@
 
 .AnswerPhotoCloseBtn {
   position: absolute;
-  top: 15px;
+  /* top: 15px; */
   right: 35px;
   color: #f1f1f1;
   font-size: 40px;
